Fixed path for cell_type_mapping_with_NNLS vignette

--- a/vignettes/cell_type_mapping_with_NNLS.rmd
+++ b/vignettes/cell_type_mapping_with_NNLS.rmd
@@ -30,6 +30,7 @@ library(Seurat)
 library(purrr)
 library(patchwork)
 library(ggplot2)
+library(RcppML)
 ```
 
 ## Mouse brain {#mbrain}
@@ -126,13 +127,13 @@ se_allen <- se_allen |>
 ```
 
 ```{r eval=FALSE, include=FALSE}
-saveRDS(se_brain_spatial, "~/10x_data/R_objects/se_brain_spatial")
+saveRDS(se_brain_spatial, "R_objects/se_brain_spatial")
 ```
 
 ```{r include=FALSE}
 
-se_allen <- readRDS("~/10x_data/R_objects/allen_brain")
-se_brain_spatial <- readRDS("~/10x_data/R_objects/se_brain_spatial")
+se_allen <- readRDS("R_objects/allen_brain")
+se_brain_spatial <- readRDS("R_objects/se_brain_spatial")
 
 ```
 
