--- a/vignettes/cell_type_mapping_benchmark.Rmd
+++ b/vignettes/cell_type_mapping_benchmark.Rmd
@@ -398,7 +398,7 @@ For deconvolution with stereoscope, we used the scvi implementation, following t
 ## Compute performance metrics
 
 ```{r eval=FALSE}
-stereoscope <- read.table("synthetic_spots/stereoscope/stereoscope_proportions.csv", sep = ",", header = TRUE, row.names = 1, check.names = FALSE)
+stereoscope <- read.table("synthetic_spots/stereoscope/W.2023-08-17102550.170200.tsv", sep = "\t", header = TRUE, row.names = 1, check.names = FALSE)
 pred_all$inf_props_stereoscope <- stereoscope[, rownames(se_Visium_agg@assays$celltypeprops)] |> as.matrix() |> as.numeric()
 ```
 
@@ -440,6 +440,12 @@ dev.off()
 
 ![4. Computation time for 5 methods on synthetic Visium data with 10,000 spots. The y-axis shows the run time in seconds.](synthetic_spots/run_time_comparison_10k.jpg)
 
+```{r eval=FALSE}
+rmse <- function(x, y) {
+  sqrt(mean((x - y)^2))
+}
+```
+
 ```{r fig.asp=0.5, fig.width=10, eval=FALSE}
 pred_all_long <- pred_all |> 
   tidyr::pivot_longer(cols = c("inf_props_nnls", "inf_props_rctd", "inf_props_seurat", 
@@ -465,7 +471,6 @@ p1 + p2
 saveRDS(pred_all, file = "synthetic_spots/results/predicted_proportions_10k.rds")
 ```
 
-
 ```{r eval=FALSE, include=FALSE}
 jpeg(filename = "synthetic_spots/performance_metrics.jpg", width = 2e3, height = 8e2, res = 200)
 print(p1 + p2)
@@ -475,6 +480,10 @@ dev.off()
 ![5. Performance metrics for 5 methods. The pearson correlation scores and RMSE are calculated from the inferred vs expected proportions.](synthetic_spots/performance_metrics.jpg)
 
 ## Scatter plots
+
+```{r include=FALSE, eval=FALSE}
+pred_all <- readRDS("synthetic_spots/results/predicted_proportions_10k.rds")
+```
 
 ```{r fig.width=7, fig.height=30, eval=FALSE}
 pred_all_long <- pred_all |> tidyr::pivot_longer(cols = c("inf_props_nnls", "inf_props_rctd", "inf_props_seurat", 
