--- a/vignettes/IF_data.Rmd
+++ b/vignettes/IF_data.Rmd
@@ -19,13 +19,13 @@ In this article, we'll demonstrate how to load Immunoflurescence (IF) data with 
 
 You can download example data from 10x Genomics website. Here we'll use a Breast Cancer data set called "Visium CytAssist Gene and Protein Expression Library of Human Breast Cancer, IF, 6.5mm (FFPE)".
 
-Assuming that you have downloaded the data (\`filtered_feature_bc_matrix.h5\` and the \`spatial/\` folder) into your current working directory, you can load the data into a Seurat object:
+Assuming that you have downloaded the data (\`filtered_feature_bc_matrix.h5\` and the \`spatial/\` folder) into your current working directory (and in a folder called "IF_data/" in this case) , you can load the data into a Seurat object:
 
 ```{r eval=FALSE}
-samples <- "filtered_feature_bc_matrix.h5"
-imgs <- "spatial/tissue_hires_image.png"
-spotfiles <- "spatial/tissue_positions.csv"
-json <- "spatial/scalefactors_json.json"
+samples <- "IF_data/filtered_feature_bc_matrix.h5"
+imgs <- "IF_data/spatial/tissue_hires_image.png"
+spotfiles <- "IF_data/spatial/tissue_positions.csv"
+json <- "IF_data/spatial/scalefactors_json.json"
 
 infoTable <- tibble(samples, imgs, spotfiles, json)
 hBrCa <- ReadVisiumData(infoTable)
