--- a/vignettes/cell_type_mapping_with_NNLS.rmd
+++ b/vignettes/cell_type_mapping_with_NNLS.rmd
@@ -251,7 +251,7 @@ We can also use the predicted cell type proportions to compute factors using NMF
 nmf_data <- FetchData(se_brain_spatial, selected_celltypes) |> 
   RcppML::nmf(k = 10, verbose = F)
 
-nmf_data_h <- nmf_data$h |> as.data.frame()
+nmf_data_h <- nmf_data@h |> as.data.frame()
 rownames(nmf_data_h) <- paste0("Factor_", 1:10)
 colnames(nmf_data_h) <- selected_celltypes
 
