Fix wrongly named object

--- a/vignettes/spatial_statistics_for_labelled_spots.Rmd
+++ b/vignettes/spatial_statistics_for_labelled_spots.Rmd
@@ -58,7 +58,7 @@ se <- ReadVisiumData(infoTable)
 
 ```{r include=FALSE}
 se <- readRDS("R_objects/se_kidney_spatial")
-DefaultAssay(se_kidney_spatial) <- "Spatial"
+DefaultAssay(se) <- "Spatial"
 ```
 
 ```{r}
